<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:actionBarSize"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/single_margin"
    android:paddingLeft="@dimen/single_margin"
    android:paddingRight="@dimen/single_margin"
    android:paddingTop="@dimen/single_margin">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/single_margin"
        android:paddingTop="@dimen/single_margin"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/single_margin"
            android:orientation="vertical"
            android:paddingTop="@dimen/single_margin">

            <!--set password-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/activity_create_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/activity_create_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cryptobox_blue"
                    android:hint="@string/prompt_set_password"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

            <!--password strength-->
            <ProgressBar
                android:id="@+id/activity_create_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/single_margin"
                android:backgroundTint="@color/cryptobox_blue"
                android:progressBackgroundTint="@color/cryptobox_blue_accent_60"
                />

            <TextView
                android:id="@+id/activity_create_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_strength"/>

            <!--button-->
            <Button
                android:id="@+id/activity_create_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/single_margin"
                android:layout_marginTop="@dimen/single_margin"
                android:backgroundTint="@color/cryptobox_blue"
                android:text="@string/activity_create_button_state_1"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

