...
            android:onClick="onClickDate"
            android:textSize="@dimen/large_body_text"
            android:textStyle="italic"
            />

        <EditText
            android:id="@+id/activity_editor_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@color/transparent"
            android:focusable="false"
...
            android:maxLength="150"
            android:textStyle="bold"
            android:hint="@string/activity_editor_title_hint"
            />

        <EditText
            android:id="@+id/activity_editor_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@color/transparent"
            android:focusable="false"
...
