<resources>
    <string name="app_name">CryptoBox</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="activity_explain_create_button">CREATE ACCOUNT</string>

    <string name="title_activity_notes_list">NotesListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_explain">ExplainActivity</string>
    <string name="password_strength">Password Strength: %1$s </string>
    <string name="activity_create_appbar_title">Password Set Up</string>
    <string name="activity_create_button_state_1">Ok</string>
    <string name="activity_explain_skip_button">Skip Create</string>
    <string name="activity_explain_app_logo_content_description">cryptobox app logo</string>

    <string name="acitivity_login_button_text_state_1">Ok</string>
    <string name="acitivity_login_button_text_state_2">Authorized</string>

...
